--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flux": "3.1.3",
     "lodash.find": "^4.6.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-ga": "^2.7.0",
     "react-quill": "^1.3.3",
