--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.19.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "redis": "^3.0.2",
+    "util": "^0.12.2"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
